fixed too small chart labels

--- a/css/style.css
+++ b/css/style.css
@@ -1381,3 +1381,10 @@
 	#unitsNav {
 		margin-left: 45%;
 	}
+
+
+/* competition chart */
+* {
+	font-size: 40%;
+	font-weight: 800;
+}
